제작 및 수정
두 번째 서브 페이지 반응형 수정, 네 번째 서브 페이지 제작

--- a/company.html
+++ b/company.html
@@ -6,34 +6,32 @@
     <link rel="icon" href="x" type="image/x-icon">
     <link rel="stylesheet" href="css/company.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="wrapper">
-<!--------------------------------데스크탑네비-------------------------------------->
+    <!--------------------------------데스크탑네비-------------------------------------->
     <header>
         <nav id="topGnb">
             <a href="index.html">
                 <img src="img/logo_color.png" width="166px" height="28px" alt="">
             </a>
             <ul>
-                <li><a href="#">회사소개</a></li>
+                <li><a href="">회사소개</a></li>
                 <li><a href="#">사업영역</a></li>
                 <li><a href="method.html">특장점</a></li>
                 <li><a href="work_list.html">포트폴리오</a></li>
-                <li><a href="#">오시는 길</a></li>
+                <li><a href="contactus.html">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
             <span class="material-symbols-outlined" id="hamburger">menu</span>
         </nav>
-<!--------------------------------데스크탑서브메뉴-------------------------------------->
+        <!--------------------------------데스크탑서브메뉴-------------------------------------->
         <nav id="subMenu">
             <ul class="subList">
                 <li>
-                    <a href="">
+                    <a href="company.html">
                         회사소개
                     </a>
                 </li>
@@ -94,12 +92,12 @@
                 </ul>
             </div>
         </nav>
-<!--------------------------------타이틀-------------------------------------->
+        <!--------------------------------타이틀-------------------------------------->
         <div id="title">
             <h1>Company Info</h1>
         </div>
     </header>
-<!--------------------------------모바일네비-------------------------------------->
+    <!--------------------------------모바일네비-------------------------------------->
     <nav class="mobileGnb">
         <div id="mobileTop">
             <a href="index.html">
@@ -144,11 +142,11 @@
             </div>
             <li><a href="method.html">특장점</a></li>
             <li><a href="work_list.html">포트폴리오</a></li>
-            <li><a href="#">오시는 길</a></li>
+            <li><a href="contactus.html">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
     </nav>
-<!--------------------------------section1-------------------------------------->
+    <!--------------------------------section1-------------------------------------->
     <section id="section1">
         <div class="textBox">
             <div class="name">회사명</div>
@@ -174,7 +172,7 @@
                 <li>디지털채널 운영 및 이노베이션 사업</li>
             </ul>
         </div>
-<!--------------------------------section1-mobile-------------------------------------->
+        <!--------------------------------section1-mobile-------------------------------------->
         <div id="section1_mobile">
             <div class="section1_mobile_txtBox">
                 <div class="mobileName">회사명</div>
@@ -204,7 +202,7 @@
             </div>
         </div>
     </section>
-<!--------------------------------section2-------------------------------------->
+    <!--------------------------------section2-------------------------------------->
     <section id="section2">
         <div id="purple">
             <div>
@@ -219,7 +217,7 @@
             </div>
         </div>
     </section>
-<!--------------------------------section3-------------------------------------->
+    <!--------------------------------section3-------------------------------------->
     <section id="section3">
         <div id="client">
             <h1>Our Client</h1>
@@ -335,7 +333,7 @@
             </ul>
         </div>
     </section>
-<!--------------------------------footer-------------------------------------->
+    <!--------------------------------footer-------------------------------------->
     <footer id="footer">
         <div>
             <img src="img/footer_logo_on.png" alt="">
@@ -361,13 +359,11 @@
         let subMenu2=$("#subMenu2");
         let navLi=$("#topGnb li a");
         /********************topGnb 활성화 및 비활성화********************/
+
         subMenu.hide();
         subMenu2.hide();
-        header.mouseleave(function (){
-            subMenu.hide();
-            subMenu2.hide();
-        })
         navLi.eq(0).hover(function (){
+            // subList1.show();
             subMenu.show();
             subMenu2.hide();
         });subMenu.mouseleave(function (){
