--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <li><a href="#">사업영역</a></li>
                 <li><a href="method.html">특장점</a></li>
                 <li><a href="work_list.html">포트폴리오</a></li>
-                <li><a href="#">오시는 길</a></li>
+                <li><a href="contactus.html">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
@@ -165,7 +165,7 @@
     <!--------------------------------모바일 메뉴-------------------------------------->
     <nav class="mobileGnb">
         <div id="mobileTop">
-            <a href="#">
+            <a href="index.html">
                 <img src="img/logo_color.png" alt="">
             </a>
             <span class="material-symbols-outlined close">close</span>
@@ -207,7 +207,7 @@
             </div>
             <li><a href="method.html">특장점</a></li>
             <li><a href="work_list.html">포트폴리오</a></li>
-            <li><a href="#">오시는 길</a></li>
+            <li><a href="contactus.html">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
     </nav>
@@ -330,12 +330,14 @@
                 <img src="img/file_1651838704_.png" alt="" class="main">
             </div>
             <div class="mainBox">
-                <div id="plusBox">
-                    <img src="img/ico_more.png" alt="" id="nonecross">
-                    <img src="img/ico_more_on.png" alt="" id="actcross">
-                </div>
+                <a href="work_list.html">
+                    <div id="plusBox">
+                        <img src="img/ico_more.png" alt="" id="nonecross">
+                        <img src="img/ico_more_on.png" alt="" id="actcross">
+                    </div>
+                </a>
                 <span class="small">
-                   <a href="#">
+                   <a href="work_list.html">
                        <img src="img/m_more.png" alt="" id="smallcross">
                     </a>
                 </span>
