--- a/method.html
+++ b/method.html
@@ -25,7 +25,7 @@
                 <li><a href="#">사업영역</a></li>
                 <li><a href="method.html">특장점</a></li>
                 <li><a href="work_list.html">포트폴리오</a></li>
-                <li><a href="#">오시는 길</a></li>
+                <li><a href="contactus.html">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
@@ -146,7 +146,7 @@
             </div>
             <li><a href="method.html">특장점</a></li>
             <li><a href="work_list.html">포트폴리오</a></li>
-            <li><a href="#">오시는 길</a></li>
+            <li><a href="contactus.html">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
     </nav>
@@ -192,15 +192,63 @@
                     </p>
                 </div>
             </div>
+            <!---->
+        </div>
+        <div id="d-ContentBox">
+            <div class="contentBox">
+                <div class="inside_ContentBox">
+                    <img src="img/cont_method01.png" width="100px" height="100px" alt="">
+                </div>
+                <div class="inside_txtBox">
+                    <h3>Digital Branding</h3>
+                    <p>
+                        강력한 Digital Branding을 위해<br>
+                        사용자의 Experiences Satisfaction을 높임으로<br>
+                        고객의 경험과 상호작용을 바탕으로<br>
+                        인지도, 만족도, 충성도를 높이는 전략과<br>
+                        실행방안을 제시합니다.
+                    </p>
+                </div>
+            </div>
+            <div class="contentBox">
+                <div class="inside_ContentBox">
+                    <img src="img/cont_method02.png" width="110px" height="90px" alt="">
+                </div>
+                <div class="inside_txtBox">
+                    <h3>Strategic Planning</h3>
+                    <p>
+                        중장기적 시각으로 고객과<br>
+                        사용자의 정확한 Needs를 파악하여<br>
+                        최적의 Digital Value Strategy를 제시함으로<br>
+                        디지털채널별 포지셔닝과 더불어<br>
+                        최상의 퍼포먼스를 위한 I.M.C를 플랜을 제공합니다.
+                    </p>
+                </div>
+            </div>
+            <div class="contentBox">
+                <div class="inside_ContentBox">
+                    <img src="img/cont_method03.png" width="100px" height="100px" alt="">
+                </div>
+                <div class="inside_txtBox">
+                    <h3>Digital Creative Value</h3>
+                    <p>
+                        디지털 채널 및 사용자별로 선호하는<br>
+                        UX/UI, Design Style, Layout, Color,<br>
+                        Typography, Metaphor 등을<br>
+                        Analysis하고 사용자의 목적에 부합하는<br>
+                        최상의 가치를 제공합니다.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
-<!------------------------------section2------------------------------>
+    <!------------------------------section2------------------------------>
     <section id="section2">
         <div id="section2_txtBox">
             <h1>Smart CA Methodology</h1>
             <p>7단계의 Phase와 하부 Activity 및 Task로 구성되어 안정적인 프로젝트 수행기반 마련</p>
         </div>
-<!------------------------------section2_blueCircleBox------------------------------>
+        <!------------------------------section2_blueCircleBox------------------------------>
         <div id="section2_blueCircleBox">
             <div class="section2_blueCircle">
                 <p>1차<br>Heuristic<br>평가</p>
@@ -287,8 +335,111 @@
                 </ul>
             </div>
         </div>
+        <!------------------------------display_CircleBox------------------------------>
+        <div id="display_CircleBox">
+            <div id="display_blueCircleBox">
+                <div class="display_blueCircle">
+                    <p>1차<br>Heuristic<br>평가</p>
+                </div>
+                <div class="display_blueCircle">
+                    <p>2차<br>Heuristic<br>평가</p>
+                </div>
+                <div class="display_blueCircle">
+                    <p>3차<br>Heuristic<br>평가</p>
+                </div>
+            </div>
+            <div id="display_purpleCircleBox">
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Project<br>Initiation</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·환경/요구분석</li>
+                            <li>·사용자 요구분석</li>
+                            <li>·컨텐츠 분석</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Analysis</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·환경/요구분석</li>
+                            <li>·사용자 요구분석</li>
+                            <li>·컨텐츠 분석</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Plan</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·Structure Design</li>
+                            <li>·Navigation Design</li>
+                            <li>·U.I(User Interface Design)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Design<br>·Dev.</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·Concept 설정</li>
+                            <li>·Prototyping</li>
+                            <li>·Style Setup</li>
+                            <li>·Final Template 제작</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Test</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·디자인개발/Process 정의</li>
+                            <li>·상세 디자인</li>
+                            <li>·이미지 요소 제작</li>
+                            <li>·HTML 제작</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Realize</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·시스템 설계</li>
+                            <li>·시스템 통합</li>
+                            <li>·시스템 구현</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="display_allPurpleCircle">
+                    <div class="display_purpleCircle">
+                        <p>Launching</p>
+                    </div>
+                    <div class="display_purpleCircle_txtBox">
+                        <ul>
+                            <li>·Testing</li>
+                            <li>·사용자 매뉴얼/Style Guide제작</li>
+                            <li>·Site Launching</li>
+                            <li>·평가</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-<!------------------------------footer------------------------------>
+    <!------------------------------footer------------------------------>
     <footer id="footer">
         <div id="footerBox">
             <div>
