--- a/work_list.html
+++ b/work_list.html
@@ -27,7 +27,7 @@
                 <li><a href="">사업영역</a></li>
                 <li><a href="method.html">특장점</a></li>
                 <li><a href="work_list.html">포트폴리오</a></li>
-                <li><a href="#">오시는 길</a></li>
+                <li><a href="contactus.html">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
@@ -148,7 +148,7 @@
             </div>
             <li><a href="method.html">특장점</a></li>
             <li><a href="work_list.html">포트폴리오</a></li>
-            <li><a href="#">오시는 길</a></li>
+            <li><a href="contactus.html">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
         </ul>
     </nav>
@@ -174,272 +174,24 @@
     </div>
     <!--------------------------------section1 (▼ 구조 변경 중 ▼)-------------------------------------->
     <section id="section1">
-        <div class="section1_LineBox sec1-mb-90">
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>LG솔루션 ESS WECARE 캠페인 개발</h2>
-                        <span class="arrow">
+        <div class="po box Consulting">
+            <!--hover-->
+            <div class="section1_imgHoverBox">
+                <div class="section1_imgHoverTxt">
+                    <h2>셀핑 서비스 개발 UI/UX 기획업무</h2>
+                    <span class="arrow">
                             <img src="img/ico_link.png" alt="">
                         </span>
-                        <p>LG솔루션 ESS WECARE 캠페인 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Coporaiton</span>
-                    <img src="work_/file_1652876889_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>LG에너지 솔루션 ESS WECARE 캠페인 개발</h3>
-                    <p>LG에너지솔루션  2022.04.15</p>
+                    <p>셀핑 서비스 개발-UI/UX 기획업무</p>
                 </div>
             </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>밥# 전기차 플랫폼 어플리케이션 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>밥# 전기차 플랫폼 어플리케이션 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">eBusiness</span>
-                    <img src="work_/file_1651841183_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>밥# 전기차 플랫폼 어플리케이션 개발</h3>
-                    <p>(주)피엠그로우 2021.11.03</p>
-                </div>
+            <div class="section1_imgBox">
+                <span class="Classification">Consulting</span>
+                <img src="work_/file_1597191590_.png" alt="">
             </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>잇다이아 게임중개플랫폼 유지보수</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>잇다이아 게임중개플랫폼 PC/모바일 통합 유지보수</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">eBusiness</span>
-                    <img src="work_/file_1652875264_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>잇다이아 게임중개플랫폼 유지보수</h3>
-                    <p>주식회사 리을 2021.10.01</p>
-                </div>
-            </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>커스텀아츠 기업사이트 반응형웹 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>반응형 웹 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Coporaiton</span>
-                    <img src="work_/file_1651840540_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>커스텀아츠 기업사이트 반응형웹 개발</h3>
-                    <p>커스텀아츠 주식회사 2021.09.10</p>
-                </div>
-            </div>
-        </div><!---------------Line 1--------------->
-        <div class="section1_LineBox sec1-mb-90">
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>팀하트흉부외과의원 홍보 및 예약 시스템 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>팀하트흉부외과의원 홍보 및 예약 시스템 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">eBusiness</span>
-                    <img src="work_/file_1652876850_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>팀하트흉부외과의원 홍보 및 예약 시스템 개발</h3>
-                    <p>팀하트흉부외과의원 2021.07.20</p>
-                </div>
-            </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>케어런츠 서비스 플랫폼 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>케어런츠 서비스 플랫폼 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">eBusiness</span>
-                    <img src="work_/file_1652876813_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>케어런츠 서비스 플랫폼 개발</h3>
-                    <p>케어런츠 주식회사 2021.05.27</p>
-                </div>
-            </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>캐치아이 기업사이트 반응형 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>캐치아이 기업사이트 반응형 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Coporaiton</span>
-                    <img src="work_/file_1651838704_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>캐치아이 기업사이트 반응형 개발</h3>
-                    <p>캐치아이 주식회사 2021.05.25</p>
-                </div>
-            </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>잇다이아 게임중개플랫폼 PC 웹 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>잇다이아 게임중개플랫폼 PC웹 개발 및 PC/모바일 최적화</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">eBusiness</span>
-                    <img src="work_/file_1652874929_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>잇다이아 개임중개 플랫폼 PC웹 개발</h3>
-                    <p>주식회사 리을 2021.05.10</p>
-                </div>
-            </div>
-        </div><!---------------Line 2--------------->
-        <div id="section1_thirdLine" class="sec1-mb-90 bor">
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>캐치아이 CI 및 패키지 개발</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>캐치아이 CI(로고) 및 패키지 개발</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Coporaiton</span>
-                    <img src="work_/file_1651836834_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>캐치아이 CI 및 패키지 개발</h3>
-                    <p>캐치아이 주식회사 2021.03.10</p>
-                </div>
-            </div>
-            <div class="po box">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>넛츠크루 기업 및 다국어 서비스 제작</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>넛츠크루 기업 및 다국어 서비스 제작</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Coporaiton</span>
-                    <img src="work_/file_1615725085_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>넛츠크루 기업 및 다국어 서비스 제작</h3>
-                    <p>넛츠크루 2021.03</p>
-                </div>
-            </div>
-            <div class="po box Consulting">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>공감랩 AVM 서비스 UI UX 컨설팅</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>자동 부동산 시세조회 및 임대차,부동산금융서비스</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Consulting</span>
-                    <img src="work_/file_1601290756_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>공감랩 AVM 서비스 UI UX 컨설팅</h3>
-                    <p>공감랩 2016.10</p>
-                </div>
-            </div>
-            <div class="po box Consulting">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>증권 버티컬 서비스 UI/UX컨설팅</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>증권 버티컬 서비스 UI/UX컨설팅</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Consulting</span>
-                    <img src="work_/file_1601290638_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>증권 버티컬 서비스 UI/UX컨설팅</h3>
-                    <p>2016.07</p>
-                </div>
-            </div>
-        </div><!---------------Line 3--------------->
-        <div class="sec1-mb-90">
-            <div class="po box Consulting">
-                <!--hover-->
-                <div class="section1_imgHoverBox">
-                    <div class="section1_imgHoverTxt">
-                        <h2>증권 버티컬 서비스 UI/UX컨설팅</h2>
-                        <span class="arrow">
-                            <img src="img/ico_link.png" alt="">
-                        </span>
-                        <p>증권 버티컬 서비스 UI/UX컨설팅</p>
-                    </div>
-                </div>
-                <div class="section1_imgBox">
-                    <span class="Classification">Consulting</span>
-                    <img src="work_/file_1601290638_.png" alt="">
-                </div>
-                <div class="section1_txtBox">
-                    <h3>증권 버티컬 서비스 UI/UX컨설팅</h3>
-                    <p>2016.07</p>
-                </div>
+            <div class="section1_txtBox">
+                <h3>셀핑 서비스 개발-UI/UX 기획업무</h3>
+                <p>셀핑 2016.06</p>
             </div>
         </div>
     </section>
@@ -475,12 +227,7 @@
             subMenu.hide();
             subMenu2.hide();
         })
-        /*navLi.hover(function (){
-            $(this).addClass("gnbActive");
-            navLi.not(this).removeClass("gnbActive");
-        })*/
         navLi.eq(0).hover(function (){
-            // subList1.show();
             subMenu.show();
             subMenu2.hide();
         });subMenu.mouseleave(function (){
@@ -573,8 +320,8 @@
         let activeClass=$("#section1_nav nav ul li");
 
         activeClass.click(function (){
+            activeClass.removeClass("active");
             $(this).addClass("active");
-            activeClass.not(this).removeClass("active")
         })
         /********************list 별 상자 구분********************/
         let box=$("#section1 .box")
@@ -583,12 +330,15 @@
         consulting.hide();
         activeClass.eq(0).click(function (){/* All */
             box.show();
+            box.parent().addClass("sec1-mb-90");
             $(".Consulting").hide();
         })
         activeClass.eq(1).click(function (){ /* consulting */
+            box.hide();
+            box.parent().removeClass("sec1-mb-90");
+            consulting.parent().addClass("sec1-mb-90");
             consulting.show();
-            box.not(".Consulting").hide();
-            box.removeClass(sec1-mb-90);
+
         })
     })
 </script>
