--- a/work_list.html
+++ b/work_list.html
@@ -149,7 +149,7 @@
             <li><a href="method.html">특장점</a></li>
             <li><a href="work_list.html">포트폴리오</a></li>
             <li><a href="#">오시는 길</a></li>
-            <li><a href="#">프로젝트 의뢰</a></li>
+            <li><a href="request.html">프로젝트 의뢰</a></li>
         </ul>
     </nav>
     <!--------------------------------section1 네비-------------------------------------->
